--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -244,7 +244,7 @@
                 </li>
                 <li><a style="border-radius: 10px" href="@Url.Content("~/TransportationPage/TransportationHomePage")">租車&接送</a></li>
                 <li><a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">探索更多玩法</a></li>
-                <li><a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">SHOP</a></li>
+                <li><a style="border-radius: 10px" href="@Url.Content("~/TheMart/Index")">SHOP</a></li>
             </ul>
         </div>
     </nav>
