--- a/MIST143_Traveler/wwwroot/css/souvenirShop.css
+++ b/MIST143_Traveler/wwwroot/css/souvenirShop.css
@@ -241,6 +241,44 @@
     height: 300px;
 }
 
+.bttn {
+    width: 630px;
+    background: #fff;
+    position: relative;
+    text-transform: uppercase;
+    overflow: hidden;
+    color: #fff;
+    position: relative;
+    background-color: transparent;
+    z-index: 1;
+}
+
+.add {
+    color: #fff;
+}
+
+
+
+.bttn::before {
+    width: 630px;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    content: '';
+    background: #000;
+    z-index: -1;
+}
+
+.bttn:hover::before {
+    transition: 0.5s;
+    left: 700px;
+}
+
+.bttn:hover .add {
+    color: #000;
+}
+
 .footer {
     text-align: center;
     display: flex;
