--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -457,7 +457,7 @@
                     $('.soldInfo').removeClass('hiddenEle')
                   
                     if (stocksNum == 0) {
-                        $('.soldInfo').text("已售完，請點擊加入我的最愛，我們將會進行補位通知")
+                        $('.soldInfo').text("已售完，請點擊加入我的最愛，如補位，我們將會寄信通知")
                     } else {
                         $('.soldInfo').text("快售完，敬請把握")
                         
