--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -455,6 +455,13 @@
                 let stocksNum = parseInt($('.stocks').text())
                 if (stocksNum < 10) {
                     $('.soldInfo').removeClass('hiddenEle')
+                  
+                    if (stocksNum == 0) {
+                        $('.soldInfo').text("已售完，請點擊加入我的最愛，如補位，我們將會寄信通知")
+                    } else {
+                        $('.soldInfo').text("快售完，敬請把握")
+                        
+                    }
                 }
 
 
